--- a/client/src/App.css
+++ b/client/src/App.css
@@ -29,12 +29,8 @@
     border-radius: 12px;
 }
 
-.roomPage-container{
-    margin:0px;
-    padding: 0px;
+*{
     background-color: rgb(3, 173, 173);
-    width:100%;
-    height:100%;
 }
 
 .meeting{
