--- a/client/src/components/container/style.css
+++ b/client/src/components/container/style.css
@@ -1,9 +1,8 @@
 container {
-    position: fixed;
-    width: 100%;
+    width: 500px;
     height: 100%;
     background: linear-gradient(45deg, #03A9F4, #4CAF50);
-    margin-left:100px;
+    /* margin-left:100px; */
 }
 
 .color-picker-container {
@@ -15,7 +14,7 @@ container {
 .brushsize-container {
     display: inline;
     color:  rgb(7, 7, 7);
-    margin-left: 12px;
+    /* margin-left: 12px; */
 }
 
 .tools-section {
@@ -23,14 +22,13 @@ container {
 }
 
 .board-container {
-    width: 1147px;
-    height: 90%;
-    /* margin: auto; */
-    margin-left:174px;
-    margin-top: 1%;
+    width: 640px;
+    height: 900px;
+    /* margin-right:550px; */
+    margin-top: 40px;
     background: white;
 }
 
 .brush{
-    margin-left:175px;
+    margin-left:75px;
 }
